feat: 글로벌 다국어/타임존 지원 — 사용자별 timezone, 아랍어 i18n, Quiet Hours, MVP 타임존 글로벌화 (QA-68)
  - Users 엔티티에 preferredTimezone 필드 추가 + API (로그인 시 수신/GeoIP 추론)
  - SupportedTimezone 유틸리티: locale/국가코드 → timezone 매핑
  - 아랍어 i18n 파일 3종 신규 생성 (errors_ar, notifications_ar, messages_ar)
  - AttendanceService: 출석체크 날짜 판단을 사용자 타임존 기반으로 변경
  - 스케줄러 LocalDate.now()/LocalDateTime.now() 타임존 미지정 전수 수정
  - NotificationService: Quiet Hours 체크 로직 구현 (사용자 타임존 기반)
  - HomeService 실시간 MVP: 사용자 타임존 기준 "오늘" 경계 UTC 변환
  - DailyMvpHistoryScheduler: 단일 KST → 3개 타임존별 cron (KST/AST/UTC 00:00)
  - DailyMvpHistory/CategoryStats: timezone 컬럼 추가 + unique constraint 확장
  - Home MVP 캐시 TTL 5분→2분, 칭호 장착/레벨업 시 이벤트 기반 즉시 evict